# postgresql-single-kernel-library

./: .readthedocs.yaml  README.md  pyproject.toml  tox.ini
.github/: renovate.json5
.github/workflows/: approve_renovate_pr.yaml  check_pr.yaml  ci.yaml  release.yaml
docs/: .custom_wordlist.txt  conf.py  contact.md  contacts.md  contribute.md  index.md  redirects.txt  requirements.txt
docs/_static/: dropdown.css  overwrite_links.js
docs/explanation/: architecture.md  charm-versions.md  connection-pooling.md  index.md  interfaces-and-endpoints.md  logs.md  performance-and-resources.md  performance-and-testing.md  roles.md  stereo-mode.md  units.md  users.md
docs/how-to/: enable-extensions.md  enable-ldap.md  enable-plugins-extensions.md  external-network-access.md  index.md  integrate-with-another-application.md  integrate.md  logical-replication.md  manage-integrations.md  manage-passwords.md  refresh.md  scale-cluster.md  scale-replicas.md  switchover-failover.md
docs/reference/: alert-rules.md  charm-statuses.md  configuration.md  contacts.md  extensions-k8s.csv  extensions-vm.csv  glossary.md  index.md  performance-and-resources.md  plugins-extensions.md  releases.md  software-testing.md  supported-extensions.md  system-requirements.md
docs/release-notes/: index.md
docs/tutorial/: index.md
scripts/: build_charm.sh
single_kernel_postgresql/charms/: abstract_charm.py  k8s_charm.py  vm_charm.py
single_kernel_postgresql/compat/: postgresql.py
single_kernel_postgresql/config/: enums.py  exceptions.py  literals.py  locales.py  statuses.py
single_kernel_postgresql/core/: config.py  (+3 more)
tests/: conftest.py
tests/charms/postgresql_k8s_test_charm/: actions.yaml  config.yaml  metadata.yaml  pyproject.toml
tests/charms/postgresql_k8s_test_charm/src/: charm.py
tests/charms/postgresql_vm_test_charm/: actions.yaml  charm_version  charmcraft.yaml  config.yaml  pyproject.toml
tests/charms/postgresql_vm_test_charm/src/: charm.py
tests/charms/postgresql_vm_test_charm/templates/: patroni.yml.j2
(+154 files in other folders)
