# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.12"
ops = {extras = ["tracing"], version = "^3.7.1"}
boto3 = "^1.43.37"
pgconnstr = "^1.0.1"
requests = "^2.34.2"
tenacity = "^9.1.4"
pydantic = "^2.13.4"
jinja2 = "^3.1.6"
lightkube = "^0.21.0"
lightkube-models = "^1.28.1.4"
psycopg2 = "^2.9.12"
charmlibs-snap = "^1.0.1"
charmlibs-interfaces-tls-certificates = "^1.8.3"
charm-refresh = "^3.1.1.2"
charmlibs-pathops = "^1.3.0"
data-platform-helpers = "^1.1.0"

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# data_platform_libs/v0/upgrade.py
poetry-core = "*"
# data_platform_libs/v0/data_models.py
pydantic = "*"
# loki_k8s/v1/loki_push_api.py and prometheus_k8s/v0/prometheus_scrape.py
cosl = ">=0.0.50"
# certificate_transfer_interface/v0/certificate_transfer.py
jsonschema = "*"
