# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.12"
ops = {extras = ["tracing"], version = "^3.7.0"}
boto3 = "^1.43.14"
pgconnstr = "^1.0.1"
requests = "^2.34.2"
tenacity = "^9.1.4"
psycopg2 = "^2.9.12"
pydantic = "^2.13.4"
jinja2 = "^3.1.6"
pysyncobj = "^0.3.15"
psutil = "^7.2.2"
charm-refresh = "^3.1.0.2"
charmlibs-snap = "^1.0.1"
charmlibs-interfaces-tls-certificates = "^1.8.1"
charmlibs-pathops = "^1.0.1"
data-platform-helpers = "^0.1.7"

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# data_platform_libs/v0/data_models.py
pydantic = "*"
# grafana_agent/v0/cos_agent.py
cosl = ">=0.0.50"
# certificate_transfer_interface/v0/certificate_transfer.py
jsonschema = "*"
